# tddf

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  action.yml  pyproject.toml  tddf-hermes-workspace.yaml  tddf-hermes.yaml  tddf-openai-agents.yaml  tddf-openclaw.yaml  tddf.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  scenario_contribution.yml
.github/workflows/: ci.yml  release.yml
docs/: cli.md  github-actions.md  mcp.md  scenarios.md  snapshots.md
examples/configs/: tddf-claude-agent-sdk.yaml  tddf-composed.yaml  tddf-hermes-mcp-smoke.yaml  tddf-hermes-workspace.yaml  tddf-hermes.yaml  tddf-langgraph.yaml  tddf-openai-agents.yaml  tddf-openclaw.yaml
examples/github-actions/: tddf.yml
research/: source-map.md  source-map.yaml
scripts/: run-agentdojo-banking-check.sh  run-agentdojo-suite.sh
src/tddf/: __main__.py  assess.py  baseline.py  claude_agent_sdk_runner.py  cli.py  compliance.py  config.py  config_loader.py  langgraph_runner.py  mcp_protocol.py  mcp_stdio.py  openai_agents_runner.py  output.py  payloads.py  registry.py  results.py  runner.py  semantic.py  servers.py  snapshots.py  target.py  templates.py  traps.py  watch.py
src/tddf/data/: agentdojo_curated.yaml  injecagent_curated.yaml
src/tddf/examples/: safe_agent.py
src/tddf/importers/: agentdojo.py  injecagent.py
tests/: test_agentdojo_importer.py  test_assess.py  test_baseline.py  test_ci_files.py  test_cli.py  test_composition.py  test_config_loader.py  test_encoding_strategies.py  test_evidence_transparency.py  test_importers.py  test_mcp_protocol.py  test_mcp_stdio.py  test_payloads.py  test_runner.py  test_semantic.py  test_snapshots.py  test_templates.py  test_watch.py
tests/fixtures/: discovery_json_agent.py  discovery_text_agent.py  exfil_agent.py  mock_hermes.py  mock_langgraph.py  mock_openai_agents_app.py  mock_openclaw.py  real_claude_agent_transport.py  real_langgraph_app.py  real_openai_agents_app.py  safe_agent.py  semantic_agent.py
tests/fixtures/claude_agent_sdk/claude_agent_sdk/: __init__.py
tests/fixtures/injecagent/data/: test_cases_ds_base.json
tests/fixtures/openai_agents_sdk/agents/: __init__.py
