[project]
name = "tddf"
version = "2026.4.1"
description = "Test whether your AI agent can be tricked into leaking data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["agents", "security", "mcp", "prompt-injection", "red-teaming"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/gonzalosr/tddf"
Repository = "https://github.com/gonzalosr/tddf"
Issues = "https://github.com/gonzalosr/tddf/issues"
dependencies = [
  "pydantic>=2.11.0,<3.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "rich>=14.0.0,<15.0.0",
  "typer>=0.16.0,<0.17.0",
]

[project.scripts]
tddf = "tddf.cli:app"
tddf-safe-agent = "tddf.examples.safe_agent:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-xdist>=3.8.0,<4.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
