[project]
name = "tddf"
version = "2026.4.1"
description = "Behaviour regression tests for AI agents — deterministic, local-first, framework-agnostic"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_LICENSES.md"]
authors = [{ name = "Faivlex LLC" }]
maintainers = [{ name = "Faivlex LLC" }]
requires-python = ">=3.12"
keywords = ["agents", "testing", "ci", "regression", "mcp", "prompt-injection"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.11.0,<3.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "rich>=14.0.0,<15.0.0",
  "typer>=0.16.0,<0.17.0",
]

[project.optional-dependencies]
agentdojo = ["agentdojo>=0.1.35,<0.2.0"]

[project.urls]
Homepage = "https://github.com/faivlex/tddf"
Repository = "https://github.com/faivlex/tddf"
Issues = "https://github.com/faivlex/tddf/issues"

[project.scripts]
tddf = "tddf.cli:app"
tddf-safe-agent = "tddf.examples.safe_agent:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0,<10.0.0",
  "pytest-xdist>=3.8.0,<4.0.0",
  "agentdojo>=0.1.35,<0.2.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tddf"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
